--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
           -
             ruby: 2.7.4
             gemfile: gemfiles/Gemfile.4.2-2.7.4.gemfile
+          -
+            ruby: 2.7.4
+            gemfile: gemfiles/Gemfile.5.2-2.7.4.gemfile
 
     env:
       BUNDLE_GEMFILE: "${{ matrix.gemfile }}"
